2006-04-07  Edward Hervey  <edward@fluendo.com>

	* docs/HACKING:
	Added part about unused variables.
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/playground.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/glade.py:
	* pitivi/ui/infolayer.py:
	* pitivi/ui/projectsettings.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	Prepend 'unused_' to all unused variables in callbacks (helps clear out
	pychecker runs).
	Comment out non-working parts of the UI so not to confuser users trying
	those parts.
	More pychecker cleaning.

2006-04-06  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Fixes for common/ modifications
	* pitivi/bin.py:
	More debug information when recording
	* pitivi/playground.py:
	debug fix

2006-03-29  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	add configure.py to BUILT_SOURCES so it gets rebuilt correctly when
	modified.
	* pitivi/discoverer.py:
	More sensible behaviour when getting an unknown stream.
	* pitivi/playground.py:
	More debugging

2006-03-29  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Revert previous change until decodebin is fixed.

2006-03-29  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py: (SmartTimelineBin):
	Unlink from tees when pads are removed.
	Make the Rendering process more efficient.
	* pitivi/discoverer.py:
	Don't try to thumbnail non-video files.
	* pitivi/timeline.py:
	Remove ghostpads in the timeline when composition pads are
	removed.
	* pitivi/ui/viewer.py:
	Display a message if we couldn't start the rendering.

2006-03-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	Also set the combobox to show the simple view default.

2006-03-28  Edward Hervey  <edward@fluendo.com>
